Downgrade to Java 8 and MC 1.11
From Java 17 and MC 1.19
This will allow more support for plugins that (want to) use AnnoyingAPI